--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,6 @@ android {
     }
 }
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
 }
